Added certificates for movies and characters
