# internal/web/api/server.go
@@ -58,6 +58,9 @@ type ServerInterface interface {
 	// (PUT /characters/{characterId})
 	PutCharactersCharacterId(ctx echo.Context, characterId uint64) error
 
+	// (GET /characters/{characterId}/cert)
+	GetCharactersCharacterIdCert(ctx echo.Context, characterId uint64) error
+
 	// (GET /movies)
 	GetMovies(ctx echo.Context) error
 
@@ -72,6 +75,9 @@ type ServerInterface interface {
 
 	// (PUT /movies/{movieId})
 	PutMoviesMovieId(ctx echo.Context, movieId uint64) error
+
+	// (GET /movies/{movieId}/cert)
+	GetMoviesMovieIdCert(ctx echo.Context, movieId uint64) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -145,6 +151,22 @@ func (w *ServerInterfaceWrapper) PutCharactersCharacterId(ctx echo.Context) erro
 	return err
 }
 
+// GetCharactersCharacterIdCert converts echo context to params.
+func (w *ServerInterfaceWrapper) GetCharactersCharacterIdCert(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "characterId" -------------
+	var characterId uint64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "characterId", ctx.Param("characterId"), &characterId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter characterId: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetCharactersCharacterIdCert(ctx, characterId)
+	return err
+}
+
 // GetMovies converts echo context to params.
 func (w *ServerInterfaceWrapper) GetMovies(ctx echo.Context) error {
 	var err error
@@ -211,6 +233,22 @@ func (w *ServerInterfaceWrapper) PutMoviesMovieId(ctx echo.Context) error {
 	return err
 }
 
+// GetMoviesMovieIdCert converts echo context to params.
+func (w *ServerInterfaceWrapper) GetMoviesMovieIdCert(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "movieId" -------------
+	var movieId uint64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "movieId", ctx.Param("movieId"), &movieId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter movieId: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetMoviesMovieIdCert(ctx, movieId)
+	return err
+}
+
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -244,11 +282,13 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.DELETE(baseURL+"/characters/:characterId", wrapper.DeleteCharactersCharacterId)
 	router.GET(baseURL+"/characters/:characterId", wrapper.GetCharactersCharacterId)
 	router.PUT(baseURL+"/characters/:characterId", wrapper.PutCharactersCharacterId)
+	router.GET(baseURL+"/characters/:characterId/cert", wrapper.GetCharactersCharacterIdCert)
 	router.GET(baseURL+"/movies", wrapper.GetMovies)
 	router.POST(baseURL+"/movies", wrapper.PostMovies)
 	router.DELETE(baseURL+"/movies/:movieId", wrapper.DeleteMoviesMovieId)
 	router.GET(baseURL+"/movies/:movieId", wrapper.GetMoviesMovieId)
 	router.PUT(baseURL+"/movies/:movieId", wrapper.PutMoviesMovieId)
+	router.GET(baseURL+"/movies/:movieId/cert", wrapper.GetMoviesMovieIdCert)
 
 }
 
@@ -375,6 +415,32 @@ func (response PutCharactersCharacterId404Response) VisitPutCharactersCharacterI
 	return nil
 }
 
+type GetCharactersCharacterIdCertRequestObject struct {
+	CharacterId uint64 `json:"characterId"`
+}
+
+type GetCharactersCharacterIdCertResponseObject interface {
+	VisitGetCharactersCharacterIdCertResponse(w http.ResponseWriter) error
+}
+
+type GetCharactersCharacterIdCert200TextResponse string
+
+func (response GetCharactersCharacterIdCert200TextResponse) VisitGetCharactersCharacterIdCertResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "text/plain")
+	w.WriteHeader(200)
+
+	_, err := w.Write([]byte(response))
+	return err
+}
+
+type GetCharactersCharacterIdCert404Response struct {
+}
+
+func (response GetCharactersCharacterIdCert404Response) VisitGetCharactersCharacterIdCertResponse(w http.ResponseWriter) error {
+	w.WriteHeader(404)
+	return nil
+}
+
 type GetMoviesRequestObject struct {
 }
 
@@ -482,6 +548,32 @@ func (response PutMoviesMovieId404Response) VisitPutMoviesMovieIdResponse(w http
 	return nil
 }
 
+type GetMoviesMovieIdCertRequestObject struct {
+	MovieId uint64 `json:"movieId"`
+}
+
+type GetMoviesMovieIdCertResponseObject interface {
+	VisitGetMoviesMovieIdCertResponse(w http.ResponseWriter) error
+}
+
+type GetMoviesMovieIdCert200TextResponse string
+
+func (response GetMoviesMovieIdCert200TextResponse) VisitGetMoviesMovieIdCertResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "text/plain")
+	w.WriteHeader(200)
+
+	_, err := w.Write([]byte(response))
+	return err
+}
+
+type GetMoviesMovieIdCert404Response struct {
+}
+
+func (response GetMoviesMovieIdCert404Response) VisitGetMoviesMovieIdCertResponse(w http.ResponseWriter) error {
+	w.WriteHeader(404)
+	return nil
+}
+
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 
@@ -500,6 +592,9 @@ type StrictServerInterface interface {
 	// (PUT /characters/{characterId})
 	PutCharactersCharacterId(ctx context.Context, request PutCharactersCharacterIdRequestObject) (PutCharactersCharacterIdResponseObject, error)
 
+	// (GET /characters/{characterId}/cert)
+	GetCharactersCharacterIdCert(ctx context.Context, request GetCharactersCharacterIdCertRequestObject) (GetCharactersCharacterIdCertResponseObject, error)
+
 	// (GET /movies)
 	GetMovies(ctx context.Context, request GetMoviesRequestObject) (GetMoviesResponseObject, error)
 
@@ -514,6 +609,9 @@ type StrictServerInterface interface {
 
 	// (PUT /movies/{movieId})
 	PutMoviesMovieId(ctx context.Context, request PutMoviesMovieIdRequestObject) (PutMoviesMovieIdResponseObject, error)
+
+	// (GET /movies/{movieId}/cert)
+	GetMoviesMovieIdCert(ctx context.Context, request GetMoviesMovieIdCertRequestObject) (GetMoviesMovieIdCertResponseObject, error)
 }
 
 type StrictHandlerFunc = strictecho.StrictEchoHandlerFunc
@@ -661,6 +759,31 @@ func (sh *strictHandler) PutCharactersCharacterId(ctx echo.Context, characterId 
 	return nil
 }
 
+// GetCharactersCharacterIdCert operation middleware
+func (sh *strictHandler) GetCharactersCharacterIdCert(ctx echo.Context, characterId uint64) error {
+	var request GetCharactersCharacterIdCertRequestObject
+
+	request.CharacterId = characterId
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.GetCharactersCharacterIdCert(ctx.Request().Context(), request.(GetCharactersCharacterIdCertRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetCharactersCharacterIdCert")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(GetCharactersCharacterIdCertResponseObject); ok {
+		return validResponse.VisitGetCharactersCharacterIdCertResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
 // GetMovies operation middleware
 func (sh *strictHandler) GetMovies(ctx echo.Context) error {
 	var request GetMoviesRequestObject
@@ -788,6 +911,31 @@ func (sh *strictHandler) PutMoviesMovieId(ctx echo.Context, movieId uint64) erro
 		return err
 	} else if validResponse, ok := response.(PutMoviesMovieIdResponseObject); ok {
 		return validResponse.VisitPutMoviesMovieIdResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
+// GetMoviesMovieIdCert operation middleware
+func (sh *strictHandler) GetMoviesMovieIdCert(ctx echo.Context, movieId uint64) error {
+	var request GetMoviesMovieIdCertRequestObject
+
+	request.MovieId = movieId
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.GetMoviesMovieIdCert(ctx.Request().Context(), request.(GetMoviesMovieIdCertRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetMoviesMovieIdCert")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(GetMoviesMovieIdCertResponseObject); ok {
+		return validResponse.VisitGetMoviesMovieIdCertResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
